Fix overlap issue with popup and zoom buttons on map

--- a/src/Components/UploadPopup.css
+++ b/src/Components/UploadPopup.css
@@ -1,7 +1,7 @@
 .popup {
   display: block;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   background-color: rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 100%;
@@ -96,6 +96,7 @@
   text-shadow: 0 1px 0 #fff;
   opacity: 0.5;
   margin: 0px 5px 0px 5px;
+  user-select: none;
 }
 
 .close:hover {
